2011-10-03  Xerxes Rånby  <xerxes@zafena.se>
	    David Henningsson <david.henningsson@canonical.com>
	    Matthias Klose <doko@ubuntu.com>

	LP862286
	* pulseaudio/src/native/org_classpath_icedtea_pulseaudio_EventLoop.c
	  (context_change_callback):
	  Fix exception on trying to start PulseAudio playback on ARM.

2012-06-28  Omair Majid  <omajid@redhat.com>

	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioSourceDataLine.java
	(write): Synchronize access to writeInterrupted flag.

2011-09-29  Xerxes Rånby  <xerxes@zafena.se>
	    David Henningsson <david.henningsson@canonical.com>

	LP862286
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/
	  PulseAudioDataLine.java (addStreamListeners):
	  Fix exception on trying to start PulseAudio playback.

2011-06-20  Denis Lila  <dlila@redhat.com>

	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioDataLine.java
	(bufferSize): Remove.
	(getBufferSize): Return stream.getBufferSize().
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioSourceDataLine.java
	(connectLine): Improve formatting.
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioTargetDataLine.java
	(connectLine): Set up flags to adjust the latency, if needed.
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/Stream.java
	(bufAttr, bufAttrMutex): New members.
	(setBufAttr, bufferAttrCallback): New methods. They both set bufAttr.
	(getBufferSize): Return the current buffer size.
	(connectForRecording): Add a flags argument to allow callers to chose the
	flags.
	(stateCallback): When the stream is ready, set the buffer attributes to
	the actual ones used by the server.
	* pulseaudio/src/native/org_classpath_icedtea_pulseaudio_Stream.c
	(buf_attr_changed_callback): New function. 
	(Java_org_classpath_icedtea_pulseaudio_Stream_native_1pa_1stream_1new):
	Set the buffer attribute callback.

2011-06-16  Denis Lila  <dlila@redhat.com>
